--- a/success.html
+++ b/success.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="UTF-8">
-    <title>Redirecting...</title>
+    <title>Payment Success</title>
     <script>
-      window.onload = () => {
-        window.location.href = "lotoapp://payment-success";
-      };
+        setTimeout(() => {
+            window.location.href = "lotoapp://payment-success";
+        }, 500);
     </script>
-  </head>
-  <body>
-    <p>Redirecting to the app...</p>
-  </body>
+</head>
+<body>
+    <h2>✅ Payment successful! Redirecting to the app...</h2>
+    <p>If you are not redirected, <a href="lotoapp://payment-success">click here</a>.</p>
+</body>
 </html>
