--- a/cancel.html
+++ b/cancel.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="UTF-8">
-    <title>Redirecting...</title>
+    <title>Payment Cancelled</title>
     <script>
-      window.onload = () => {
-        window.location.href = "lotoapp://payment-cancel";
-      };
+        setTimeout(() => {
+            window.location.href = "lotoapp://payment-cancel";
+        }, 500);
     </script>
-  </head>
-  <body>
-    <p>Redirecting to the app...</p>
-  </body>
+</head>
+<body>
+    <h2>❌ Payment cancelled. Returning to the app...</h2>
+    <p>If you are not redirected, <a href="lotoapp://payment-cancel">click here</a>.</p>
+</body>
 </html>
-
